[package]
name = "kvstore-rs"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1", features = ["full"]}
tonic = "0.11"
prost = "0.12"
tonic-reflection = "0.11"   # 👈 Add this line
rand = "0.9.1"
futures = "0.3"


[build-dependencies]

tonic-build = "0.11"
prost-build = "0.12"

[dev-dependencies]
tempfile = "3"  # ✅ Required for engine.rs tests using temp directories
